<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:padding="5dp"
        android:background="@color/colorunchecked">
        <TextView
            android:id="@+id/mimc_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/point"
            android:drawablePadding="7dp"
            android:gravity="left|center"
            android:text="MIMC"
            android:textSize="@dimen/text_size" />
        <Button
            android:id="@+id/mimc_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="@drawable/all_btn"
            android:gravity="center"
            android:text="@string/login"
            android:textSize="@dimen/text_size" />
        <Button
            android:id="@+id/mimc_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/all_btn"
            android:text="@string/logout"
            android:textSize="@dimen/text_size" />
        <Button
            android:id="@+id/mimc_sendMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/all_btn"
            android:text="@string/button_send"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorunchecked"
        android:layout_marginTop="5dp"
        android:padding="5dp">
        <Button
            android:id="@+id/btn_create_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_group"
            android:background="@drawable/all_btn"
            android:padding="5dp"
            android:textSize="@dimen/text_size"/>
        <Button
            android:id="@+id/btn_query_group_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/query_group_info"
            android:background="@drawable/all_btn"
            android:padding="5dp"
            android:layout_marginLeft="5dp"
            android:textSize="@dimen/text_size"/>
        <Button
            android:id="@+id/btn_query_all_group_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/query_all_group_info"
            android:background="@drawable/all_btn"
            android:padding="5dp"
            android:layout_marginLeft="5dp"
            android:textSize="@dimen/text_size"/>
        <Button
            android:id="@+id/btn_join_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_group"
            android:padding="5dp"
            android:background="@drawable/all_btn"
            android:layout_marginLeft="5dp"
            android:textSize="@dimen/text_size"/>
        <Button
            android:id="@+id/btn_quit_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quit_group"
            android:background="@drawable/all_btn"
            android:padding="5dp"
            android:layout_marginLeft="5dp"
            android:textSize="@dimen/text_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="-5dp"
        android:background="@color/colorunchecked"
        android:padding="5dp">
        <Button
            android:id="@+id/btn_kick_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/all_btn"
            android:text="@string/kick_group"
            android:padding="5dp"
            android:textSize="@dimen/text_size" />
        <Button
            android:id="@+id/btn_update_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_group"
            android:background="@drawable/all_btn"
            android:layout_marginLeft="5dp"
            android:padding="5dp"
            android:textSize="@dimen/text_size" />
        <Button
            android:id="@+id/btn_dismiss_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dismiss_group"
            android:background="@drawable/all_btn"
            android:layout_marginLeft="5dp"
            android:padding="5dp"
            android:textSize="@dimen/text_size" />
        <Button
            android:id="@+id/btn_send_group_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/all_btn"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/send_group_msg"
            android:textSize="@dimen/text_size" />
        <Button
            android:id="@+id/btn_p2p_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/all_btn"
            android:text="@string/p2p_history"
            android:layout_marginLeft="5dp"
            android:padding="5dp"
            android:textSize="@dimen/text_size" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="-5dp"
        android:background="@color/colorunchecked"
        android:padding="5dp">

        <Button
            android:id="@+id/btn_p2t_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p2t_history"
            android:background="@drawable/all_btn"
            android:padding="5dp"
            android:textSize="@dimen/text_size" />
        <Button
            android:id="@+id/btn_p2p_audio_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/audio_call"
            android:background="@drawable/all_btn"
            android:padding="5dp"
            android:layout_marginLeft="5dp"
            android:textSize="@dimen/text_size" />
        <Button
            android:id="@+id/btn_p2p_video_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_call"
            android:visibility="invisible"
            android:background="@drawable/all_btn"
            android:padding="5dp"
            android:layout_marginLeft="5dp"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="-5dp"
        android:background="@color/colorunchecked"
        android:padding="5dp">
        <Button
            android:id="@+id/btn_create_unlimited_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_unlimited_group"
            android:background="@drawable/all_btn"
            android:padding="5dp"
            android:textSize="@dimen/text_size" />
        <Button
            android:id="@+id/btn_join_unlimited_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_unlimited_group"
            android:background="@drawable/all_btn"
            android:padding="5dp"
            android:layout_marginLeft="5dp"
            android:textSize="@dimen/text_size" />
        <Button
            android:id="@+id/btn_quit_unlimited_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quit_unlimited_group"
            android:background="@drawable/all_btn"
            android:padding="5dp"
            android:layout_marginLeft="5dp"
            android:textSize="@dimen/text_size" />
        <Button
            android:id="@+id/btn_dismiss_unlimited_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dismiss_unlimited_group"
            android:background="@drawable/all_btn"
            android:padding="5dp"
            android:layout_marginLeft="5dp"
            android:textSize="@dimen/text_size" />
        <Button
            android:id="@+id/btn_query_unlimited_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/query_unlimited_group"
            android:background="@drawable/all_btn"
            android:padding="5dp"
            android:layout_marginLeft="5dp"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="-5dp"
        android:background="@color/colorunchecked"
        android:padding="5dp">
        <Button
            android:id="@+id/btn_query_owner_all_unlimited_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/query_unlimited_groups"
            android:background="@drawable/all_btn"
            android:padding="5dp"
            android:textSize="@dimen/text_size" />
        <Button
            android:id="@+id/btn_query_unlimited_group_online_users"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/query_unlimited_group_online_users"
            android:background="@drawable/all_btn"
            android:padding="5dp"
            android:layout_marginLeft="5dp"
            android:textSize="@dimen/text_size" />
        <Button
            android:id="@+id/btn_send_unlimited_group_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_group_msg"
            android:background="@drawable/all_btn"
            android:padding="5dp"
            android:layout_marginLeft="5dp"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_chat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </android.support.v7.widget.RecyclerView>
</LinearLayout>