<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_name"
            android:textSize="16sp"
            android:textColor="#000000"
            android:gravity="center" />
        <EditText
            android:id="@+id/et_group_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#000000" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/members"
            android:textSize="16sp"
            android:textColor="#000000"
            android:gravity="center" />
        <EditText
            android:id="@+id/et_users"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_of_members"
            android:textSize="16sp"
            android:maxLines="5"
            android:textColor="#000000" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_margin="5dip" >

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/all_btn"
            android:text="@string/button_ok"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>